<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Ichi.Go</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title">Ichi.Go</string>
    <string name="input_message">Press the button to scan and translate the text</string>
    <string name="translate">Scan and Translate</string>
    <string name="title_activity_display_translation">DisplayTranslation</string>
    <string name="translation">English Translation</string>
    <string name="translated_text">Hello World</string>

</resources>
